--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".Activity.MainActivity"
+            android:name="com.kayushi07.bollywood.Activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,10 +32,10 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
 
-        <activity android:name=".Activity.LevelActivity"></activity>
-        <activity android:name=".Activity.GameActivity"
+        <activity android:name="com.kayushi07.bollywood.Activity.LevelActivity"></activity>
+        <activity android:name="com.kayushi07.bollywood.Activity.GameActivity"
             android:theme="@style/AppThemeGame"></activity>
-        <activity android:name=".Activity.PopupActivity"/>
+        <activity android:name="com.kayushi07.bollywood.Activity.PopupActivity"/>
 
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
@@ -46,6 +46,6 @@
 
     <meta-data
         android:name="com.google.android.gms.ads.APPLICATION_ID"
-        android:value="ca-app-pub-5152778234781012~4510752976"/>
+        android:value="ca-app-pub-5152778234781012~4728126388"/>
 
 </manifest>
